# chess

./: .gitignore  CMakeLists.txt  LICENSE
include/glad/: glad.h
src/: chessboard.cpp  glad.c  main.cpp  shader.cpp  shader.hpp  triangles.cpp  triangles.hpp  window.cpp  window.h
